Added CreateProduct Components & DeleteProduct Component. Added Bootstrap and some CSS

--- a/presentation/src/App.css
+++ b/presentation/src/App.css
@@ -2,37 +2,27 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: lightcoral;
 }
+/* Product Cards */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container{
+  margin-top: 40px;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  display: flex;
+  flex-wrap: wrap;
+  padding: .5rem;
+  margin: .9rem;
+  display: inline-block;
+  box-shadow: 6px 6px 10px black;
+  border-radius: .5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card button{
+  margin: .5rem;
 }
