--- a/presentation/src/App.css
+++ b/presentation/src/App.css
@@ -14,6 +14,36 @@ h2{
   font-weight: 700;
 }
 
+
+
+/* Mobile */
+
+@media only screen and (max-width: 830px){
+  .cardcontainer{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    margin: 2rem;
+    margin-right: 10%;
+    margin-left: 10%;
+  }
+  .card {
+    width:100%;
+    padding: .4rem;
+    margin: .4rem;
+    box-shadow: 6px 6px 10px black;
+    border-radius: .5em;
+  }
+  .form-groupheader{
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .card button{
+    margin-bottom: .2rem;
+  }
+}
+
 /* Page header */
 
 
@@ -28,14 +58,15 @@ h2{
   font-family: 'Bangers', cursive;
   font-size: 5rem;
 }
-
-.form-groupheader{
-  width: 10%;
-  margin-left: 45%;
-  margin-right: 45%;
+@media only screen and (min-width: 831px) {
+  .form-groupheader{
+    width: 10%;
+    margin-left: 45%;
+    margin-right: 45%;
+  }
 }
 /* Product Cards */
-
+@media only screen and (min-width: 831px) {
 .cardcontainer{
   display: flex;
   flex-wrap: wrap;
@@ -46,6 +77,7 @@ h2{
 }
 
 .card {
+  width: 350px;
   padding: .4rem;
   margin: .4rem;
   box-shadow: 6px 6px 10px black;
@@ -55,7 +87,7 @@ h2{
 .card button{
   margin-bottom: .2rem;
 }
-
+}
 /* Product Update Form */
 
 .updateProductForm input, textarea{
